--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mowat-server",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "Analytics tool to collect sensor data. See mowat-client for client-side",
 	"repository": {
 		"type": "git",
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.8.1",
-		"express": "^4.9.0"
+		"express": "^4.9.0",
+		"mysql": "^2.5.4"
 	}
 }
