--- a/node/package.json
+++ b/node/package.json
@@ -15,5 +15,9 @@
 	    "minimist": "^1.1.0",
 	    "kurento-client": "5.1.0",
 	    "cookie-parser": "1.3.5"
+	},
+	"scripts": {
+		"start": "node server.js"
 	}
+	
 }
